--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* Variables
 --------------------------------  */
 :root {
@@ -19,8 +18,19 @@
   --box-border-color: rgb(236, 236, 236);
 }
 
+
+$bgColor: var(--main-background-color);
+$textColor: var(--general-text-color);
+$boxColor: var(--box-bg);
+$boxBorderColor: var(--box-border-color);
+$successBgColor: var(--success-bg-color);
+$successBorderColor: var(--success-color);
+$alertBgColor: var(--alert-bg-color);
+$alertBorderColor: var(--alert-bg-color);
+
 /* Global styles
 --------------------------------  */
+
 h1 {
   font-size: 65px;
   margin: 0;
@@ -52,7 +62,7 @@ h6 {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 html {
@@ -71,11 +81,11 @@ body::-webkit-scrollbar {
 }
 
 body {
-  background: var(--main-background-color);
-  color: var(--general-text-color);
+  background: $bgColor;
+  color: $textColor;
   margin: 0;
   padding: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 15px;
   line-height: 1.5;
 }
@@ -89,6 +99,7 @@ body {
 
 /*  Header
 --------------------------------  */
+
 header {
   background: url("/images/header-bg.jpg");
   background-size: cover;
@@ -100,12 +111,12 @@ header {
 }
 
 .title, .subtitle {
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 80%);
 }
 
 nav {
   width: 100%;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0%, 0%, 0%, 80%);
 }
 
 nav ul li {
@@ -127,6 +138,7 @@ nav ul li a:hover {
 
 /*  Content
 --------------------------------  */
+
 #start-grid {
   display: grid;
   grid-template-columns: 1fr;
@@ -140,13 +152,12 @@ nav ul li a:hover {
 }
 
 .box {
-  background: var(--box-bg);
+  background: $boxColor;
   padding: 30px;
   border-radius: 4px;
-  border: solid 10px var(--box-border-color);
+  border: solid 10px $boxBorderColor;
   text-align: center;
 }
-
 .game-box {
   display: grid;
   grid-template-columns: repeat(2, [col-start] 1fr);
@@ -154,10 +165,10 @@ nav ul li a:hover {
 }
 
 .sub-box {
-  background: var(--success-bg-color);
+  background: $successBgColor;
   padding: 30px;
   border-radius: 4px;
-  border: solid 10px var(--box-border-color);
+  border: solid 10px $boxBorderColor;
   text-align: center;
 }
 
@@ -170,18 +181,18 @@ nav ul li a:hover {
 }
 
 .btn-layout {
-  position: relative;
-  display: block;
-  width: 100%;
-  text-align: center;
+    position: relative;
+    display: block;
+    width: 100%;
+    text-align: center;
 }
 
 .alert-green {
   margin-top: 8px;
   border-radius: 6px;
   padding: 6px;
-  border: solid 2px var(--success-color);
-  background: var(--success-bg-color);
+  border: solid 2px $successBorderColor;
+  background: $successBgColor;
 }
 
 .alert-green:before {
@@ -197,8 +208,8 @@ nav ul li a:hover {
   padding: 2px;
   margin: 0;
   font-weight: bold;
-  border: solid 2px var(--alert-bg-color);
-  background: var(--alert-bg-color);
+  border: solid 2px $alertBorderColor;
+  background: $alertBgColor;
 }
 
 .alert-red {
@@ -207,13 +218,13 @@ nav ul li a:hover {
   padding: 12px;
   margin: 0;
   font-weight: bold;
-  border: solid 2px var(--alert-bg-color);
-  background: var(--alert-bg-color);
+  border: solid 2px $alertBorderColor;
+  background: $alertBgColor;
 }
 
 .separator {
   display: block;
-  border-bottom: 2px solid var(--general-text-color);
+  border-bottom: 2px solid $textColor;
 }
 
 label {
@@ -243,7 +254,7 @@ button {
 
 button:hover {
   cursor: pointer;
-  border: 2px solid rgb(255, 51, 51);
+  border: 2px solid rgb(100%, 20%, 20%);
 }
 
 #bike {
@@ -284,10 +295,9 @@ button:hover {
 
 /*  Media Queries
 --------------------------------  */
+
 @media screen and (max-width: 749px) {
   .display-img {
     width: 70%;
   }
 }
-
-/*# sourceMappingURL=styles.css.map */
