--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,7 @@ nav ul li a:hover {
   border-radius: 4px;
   border: solid 10px var(--box-border-color);
   text-align: center;
+  position: relative;
 }
 
 .game-box {
@@ -227,7 +228,6 @@ label {
   padding: 5px;
   border-radius: 5px;
   font-weight: bold;
-  /*width: 100%;*/
   height: 40px;
   border: 1px solid;
 }
@@ -246,40 +246,13 @@ button:hover {
   border: 2px solid rgb(255, 51, 51);
 }
 
-#bike {
-  position: relative;
-}
-
-.tooltip {
-  vertical-align: middle;
-  width: 5%;
-  height: auto;
-  max-height: 40px;
-  margin: 0 auto;
-}
-
-.tooltip:hover {
-  cursor: pointer;
-  border-radius: 6px;
-  background-color: lightblue;
-}
-
-#thank-you-msg {
-  min-height: 400px;
-}
-
-.thumbs-up {
-  width: 100%;
-  height: auto;
-}
-
-#password {
-  width: 45%;
-}
-
-#password-button {
+#game-rules {
+  position: absolute;
+  top: -50px;
+  right: -10px;
   padding: 4px;
-  font-size: 12px;
+  height: 32px;
+  margin: 0;
 }
 
 /*  Media Queries
