Add animation, finalize html, bug fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,10 @@ nav ul li a:hover {
   column-gap: 8px;
 }
 
+#warning-msg {
+  display: none;
+}
+
 .box {
   background: var(--box-bg);
   padding: 30px;
@@ -192,16 +196,6 @@ nav ul li a:hover {
   font-size: larger;
 }
 
-.alert-red-field {
-  border-radius: 6px;
-  color: #FFFFFF;
-  padding: 2px;
-  margin: 0;
-  font-weight: bold;
-  border: solid 2px var(--alert-bg-color);
-  background: var(--alert-bg-color);
-}
-
 .alert-red {
   border-radius: 6px;
   color: #FFFFFF;
@@ -215,6 +209,16 @@ nav ul li a:hover {
 .separator {
   display: block;
   border-bottom: 2px solid var(--general-text-color);
+}
+
+.intro-text {
+  padding-left: 20%;
+  padding-right: 20%;
+  margin-bottom: 30px;
+}
+
+.start-btn-layout {
+  margin-top: 30px;
 }
 
 label {
