--- a/css/styles-modal.css
+++ b/css/styles-modal.css
@@ -1,6 +1,5 @@
 /* Variables */
 :root{
-    --main-background-color: snow;
     --accent-color: rgba(0, 0, 0, 90%);
     --hover-color: rgba(0, 0, 0, 90%);
 }
@@ -70,6 +69,7 @@
     position:absolute;
     left:50%;
     top:50%;
+    text-align: center;
     transform:translate(-50%, -50%);
     max-width:100%;
     min-width:300px;
